[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.20.0"
noise = "0.7.0"

[[bin]]
name = "cpu"
path = "src/cpu/main.rs"

[[bin]]
name = "gpu"
path = "src/gpu/main.rs"
