[package]
name = "voxel_engine"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minifb = "0.20.0"
noise = "0.7.0"
beryllium = { version = "0.2.0-alpha.1", default-features = false, features = ["link_static"] }
ogl33 = { version = "0.2.0", features = ["debug_error_checks"]}

[dev-dependencies]
beryllium = "0.2.0-alpha.4"
imagine = "0.0.5"

[[bin]]
name = "cpu"
path = "src/cpu/main.rs"

[[bin]]
name = "gpu"
path = "src/gpu/main.rs"

